Dispute Transaction misaligned fix.

--- a/server/public/css/TrackAndVerify.css
+++ b/server/public/css/TrackAndVerify.css
@@ -52,8 +52,8 @@
     border-color: rgba(253, 253, 253, 1) !important;
     padding: 0px !important;
     background: rgba(253, 253, 253) !important;
-    left: 1194.66px !important;
-    top: -129px !important;
+    left: 1070.66px !important;
+    top: -90px !important;
     position: relative;
     color: #0085C8;
     width: 157px;
